Add frameDuration attribute to OpusEncoderConfig

--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -131,6 +131,7 @@ OpusEncoderConfig {#opus-encoder-config}
 <xmp>
 dictionary OpusEncoderConfig {
   OpusBitstreamFormat format = "opus";
+  [EnforceRange] unsigned long frameDuration;
 };
 </xmp>
 </pre>
@@ -140,6 +141,10 @@ dictionary OpusEncoderConfig {
   <dd>
     Configures the format of output {{EncodedAudioChunk}}s. See
     {{OpusBitstreamFormat}}.
+  </dd>
+  <dt><dfn dict-member for=OpusEncoderConfig>frameDuration</dfn></dt>
+  <dd>
+    Configures the frame duration, in milliseconds, of output {{EncodedAudioChunk}}s.
   </dd>
 </dl>
 
