--- a/index.src.html
+++ b/index.src.html
@@ -2541,7 +2541,7 @@ enum EncodedVideoChunkType {
 : <dfn attribute for=EncodedVideoChunk>[[internal data]]</dfn>
 :: An array of bytes representing the encoded chunk data.
 : <dfn attribute for=EncodedVideoChunk>\[[type]]</dfn>
-:: The {{EncodedAudioChunkType}} of this {{EncodedVideoChunk}};
+:: The {{EncodedVideoChunkType}} of this {{EncodedVideoChunk}};
 : <dfn attribute for=EncodedVideoChunk>\[[timestamp]]</dfn>
 :: The presentation timestamp, given in microseconds.
 : <dfn attribute for=EncodedVideoChunk>\[[duration]]</dfn>
