change type of frameDuration in OpusEncoderConfig to unsigned long long, and meaning of it to microseconds as well

--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -131,7 +131,7 @@ OpusEncoderConfig {#opus-encoder-config}
 <xmp>
 dictionary OpusEncoderConfig {
   OpusBitstreamFormat format = "opus";
-  [EnforceRange] unsigned long frameDuration;
+  [EnforceRange] unsigned long long frameDuration;
 };
 </xmp>
 </pre>
@@ -144,7 +144,7 @@ dictionary OpusEncoderConfig {
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>frameDuration</dfn></dt>
   <dd>
-    Configures the frame duration, in milliseconds, of output {{EncodedAudioChunk}}s.
+    Configures the frame duration, in microseconds, of output {{EncodedAudioChunk}}s.
   </dd>
 </dl>
 
