--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -131,7 +131,7 @@ OpusEncoderConfig {#opus-encoder-config}
 <xmp>
 dictionary OpusEncoderConfig {
   OpusBitstreamFormat format = "opus";
-  [EnforceRange] unsigned long frameDuration = 20;
+  [EnforceRange] unsigned long frameDuration;
   [EnforceRange] unsigned long complexity;
   [EnforceRange] unsigned long packetlossperc = 0;
   boolean useinbandfec = false;
@@ -161,26 +161,28 @@ To check if an {{OpusEncoderConfig}} is valid, run these steps:
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>complexity</dfn></dt>
   <dd>
-    Configures the encoder's computational complexity. The valid range is `0` to `10`,
-    with `10` representing the highest complexity. If no value is specificied, the
-    default value is platform-specific: User Agents <em class="rfc2119">SHOULD</em>
-    set a default of `5` for mobile platforms, and a default of `9` for all other platforms.
+    Configures the encoder's computational complexity, as described 2.1.9. of
+    [[RFC6716]]. The valid range is `0` to `10`, with `10` representing the highest
+    complexity. If no value is specificied, the default value is platform-specific:
+    User Agents <em class="rfc2119">SHOULD</em> set a default of `5` for mobile
+    platforms, and a default of `9` for all other platforms.
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>packetlossperc</dfn></dt>
   <dd>
     Configures the encoder's expected packet loss percentage. The valid range is
     `0` to `100`.
 
-    NOTE: The packet loss percentage might be updated over the course of the encoding, and
-      it is recommended for User Agents to support these reconfigurations.
+    NOTE: The packet loss percentage might be updated over the course of the
+    encoding, and it is recommended for User Agents to support these reconfigurations.
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>useinbandfec</dfn></dt>
   <dd>
-    Specifies whether the encoder provides Opus in-band FEC.
+    Specifies whether the encoder provides Opus in-band FEC, as described by
+    section 2.1.7. of [[RFC6716]].
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>usedtx</dfn></dt>
   <dd>
-    Specifies if the encoder uses DTX.
+    Specifies if the encoder uses DTX, as described by section 2.1.9. of [[RFC6716]].
   </dd>
 </dl>
 
