--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -161,8 +161,8 @@ To check if an {{OpusEncoderConfig}} is valid, run these steps:
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>complexity</dfn></dt>
   <dd>
-    Configures the encoder's computational complexity, as described 2.1.9. of
-    [[RFC6716]]. The valid range is `0` to `10`, with `10` representing the highest
+    Configures the encoder's computational complexity, as described in section 2.1.9.
+    of [[RFC6716]]. The valid range is `0` to `10`, with `10` representing the highest
     complexity. If no value is specificied, the default value is platform-specific:
     User Agents <em class="rfc2119">SHOULD</em> set a default of `5` for mobile
     platforms, and a default of `9` for all other platforms.
@@ -177,12 +177,13 @@ To check if an {{OpusEncoderConfig}} is valid, run these steps:
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>useinbandfec</dfn></dt>
   <dd>
-    Specifies whether the encoder provides Opus in-band FEC, as described by
-    section 2.1.7. of [[RFC6716]].
+    Specifies whether the encoder provides Opus in-band Forward Error Correction
+    (FEC), as described by section 2.1.7. of [[RFC6716]].
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>usedtx</dfn></dt>
   <dd>
-    Specifies if the encoder uses DTX, as described by section 2.1.9. of [[RFC6716]].
+    Specifies if the encoder uses Discontinuous Transmission (DTX), as described
+    by section 2.1.9. of [[RFC6716]].
   </dd>
 </dl>
 
