--- a/index.src.html
+++ b/index.src.html
@@ -7,9 +7,9 @@ TR: https://www.w3.org/TR/webcodecs/
 Shortname: webcodecs
 Level: None
 Group: mediawg
-Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
+Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This specification defines interfaces to codecs for encoding and
     decoding of audio, video, and images.
