--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -7,9 +7,9 @@ Level: none
 Group: mediawg
 ED: https://w3c.github.io/webcodecs/opus_codec_registration.html
 TR: https://www.w3.org/TR/webcodecs-opus-codec-registration/
-Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
+Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     It describes, for Opus, the (1) fully qualified codec strings, (2) the
@@ -158,32 +158,6 @@ To check if an {{OpusEncoderConfig}} is valid, run these steps:
   <dt><dfn dict-member for=OpusEncoderConfig>frameDuration</dfn></dt>
   <dd>
     Configures the frame duration, in microseconds, of output {{EncodedAudioChunk}}s.
-  </dd>
-  <dt><dfn dict-member for=OpusEncoderConfig>complexity</dfn></dt>
-  <dd>
-    Configures the encoder's computational complexity, as described in section 2.1.9.
-    of [[RFC6716]]. The valid range is `0` to `10`, with `10` representing the highest
-    complexity. If no value is specificied, the default value is platform-specific:
-    User Agents <em class="rfc2119">SHOULD</em> set a default of `5` for mobile
-    platforms, and a default of `9` for all other platforms.
-  </dd>
-  <dt><dfn dict-member for=OpusEncoderConfig>packetlossperc</dfn></dt>
-  <dd>
-    Configures the encoder's expected packet loss percentage. The valid range is
-    `0` to `100`.
-
-    NOTE: The packet loss percentage might be updated over the course of an
-    encoding, and it is recommended for User Agents to support these reconfigurations.
-  </dd>
-  <dt><dfn dict-member for=OpusEncoderConfig>useinbandfec</dfn></dt>
-  <dd>
-    Specifies whether the encoder provides Opus in-band Forward Error Correction
-    (FEC), as described by section 2.1.7. of [[RFC6716]].
-  </dd>
-  <dt><dfn dict-member for=OpusEncoderConfig>usedtx</dfn></dt>
-  <dd>
-    Specifies if the encoder uses Discontinuous Transmission (DTX), as described
-    by section 2.1.9. of [[RFC6716]].
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>complexity</dfn></dt>
   <dd>
